--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>gfspark</h1>
+        <h1>
+<a name="gfspark" class="anchor" href="#gfspark"><span class="octicon octicon-link"></span></a>gfspark</h1>
 
 <p>Growth Forecast on Terminal.</p>
 
-<p>gfspark is CLI graph viewer for Growth Forecast.</p>
+<p>gfspark is a CLI graph viewer for Growth Forecast.</p>
 
-<h2>Installation</h2>
+<h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>Add this line to your application's Gemfile:</p>
 
@@ -54,9 +56,17 @@
 <pre><code>$ gem install gfspark
 </code></pre>
 
-<h2>Usage</h2>
+<h2>
+<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>ScreenShots</h2>
 
-<pre><code>usage: gfspark &lt;url|path|service_name&gt; [section_name] [graph_name]
+<p><img src="https://github.com/yuroyoro/gfspark/raw/master/images/gfspark_screenshot.png" width="600"></p>
+
+<h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
+
+<pre><code>gfspark : Growth Forecast on Terminal
+
+usage: gfspark &lt;url|path|service_name&gt; [section_name] [graph_name]
 
   Examples:
     gfspark http://your.gf.com/view_graph/your_service/your_section/your_graph?t=h
@@ -68,17 +78,58 @@
     -u, --user=USER
     -p, --pass=PASS
     -t=VALUE                         Range of Graph
-        --from=VALUE                 Start date of graph.(2011/12/08 12:10:00) required if t=c or sc
-        --to=VALUE                   End date of graph.(2011/12/08 12:10:00) required if t=c or sc
-    -h, --height=VALUE               graph height.(default 10
-    -w, --width=VALUE                graph width.(default is deteced from $COLUMNS
-    -c, --color=VALUE                Color of graph bar
+        --gmode=VALUE                graph mode: gauge or subtract (default is gauge)
+        --from=VALUE                 Start date of graph (2011/12/08 12:10:00) required if t=c or sc
+        --to=VALUE                   End date of graph (2011/12/08 12:10:00) required if t=c or sc
+    -h, --height=VALUE               graph height (default 10
+    -w, --width=VALUE                graph width (default is deteced from $COLUMNS)
+    -c, --color=VALUE                Color of graph bar (black/red/green/yellow/blue/magenta/cyan/white)
+    -n, --non-fullwidth-font         Show bar symbol as fullwidth
         --sslnoverify                don't verify SSL
         --sslcacert=v                SSL CA CERT
         --debug                      debug print
+
+    -t option detail:
+        y : Year (1day avg)
+        m : Month (2hour avg)
+        w : Week (30min avg)
+       3d : 3 Days (5min avg)
+      s3d : 3 Days (5min avg)
+        d : Day (5min avg)
+       sd : Day (1min avg)
+       8h : 8 Hours (5min avg)
+      s8h : 8 Hours (1min avg)
+       4h : 4 Hours (5min avg)
+      s4h : 4 Hours (1min avg)
+        h : Hour (5min avg),
+       sh : Hour (1min avg)
+        n : Half Day (5min avg)
+       sn : Half Day (1min avg)
+        c : Custom (5min avg)
+       sc : Custom (1min avg)
 </code></pre>
 
-<h2>Contributing</h2>
+<p>gfspark does not supports "COMPLEX GRAPH".
+if graph output is broken, try <code>--non-fullwidth-font</code> option.
+For example, your Terminal font is "Rickty", then it'll be fix graph output problem.</p>
+
+<h2>
+<a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
+
+<p>gfspark load default settings from <code>.gfspark</code> file.
+This configuration file is searched from current dirctory to pararents, or your home directory(~/.gfspark).</p>
+
+<p>.gfspark is YAML file.  It's contents is like bellow</p>
+
+<pre><code>url: http://your.growthforecast.com/
+color: red
+username: "your basic auth username"
+password: "your basic auth password"
+non_fullwidth_font: true
+</code></pre>
+
+<h2>
+<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
 <ol>
 <li>Fork it</li>
