Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h2>
 <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>ScreenShots</h2>
 
-<p><img src="https://github.com/yuroyoro/gfspark/raw/master/images/gfspark_screenshot.png" width="600"></p>
+<p><img src="https://github.com/yuroyoro/gfspark/raw/master/images/gfspark_screenshot1.png" width="600"><img src="https://github.com/yuroyoro/gfspark/raw/master/images/gfspark_screenshot2.png" width="600"></p>
 
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
@@ -77,13 +77,14 @@ usage: gfspark &lt;url|path|service_name&gt; [section_name] [graph_name]
         --url=VALUE                  Your GrowthForecast URL
     -u, --user=USER
     -p, --pass=PASS
-    -t=VALUE                         Range of Graph
+    -t, --type=VALUE                 Range of Graph
         --gmode=VALUE                graph mode: gauge or subtract (default is gauge)
         --from=VALUE                 Start date of graph (2011/12/08 12:10:00) required if t=c or sc
         --to=VALUE                   End date of graph (2011/12/08 12:10:00) required if t=c or sc
     -h, --height=VALUE               graph height (default 10
     -w, --width=VALUE                graph width (default is deteced from $COLUMNS)
     -c, --color=VALUE                Color of graph bar (black/red/green/yellow/blue/magenta/cyan/white)
+    -y, --y-axis-label=VALUE         Show y axis labels (hide/show/simple: default is show)
     -n, --non-fullwidth-font         Show bar symbol as fullwidth
         --sslnoverify                don't verify SSL
         --sslcacert=v                SSL CA CERT
@@ -101,7 +102,7 @@ usage: gfspark &lt;url|path|service_name&gt; [section_name] [graph_name]
       s8h : 8 Hours (1min avg)
        4h : 4 Hours (5min avg)
       s4h : 4 Hours (1min avg)
-        h : Hour (5min avg),
+        h : Hour (5min avg)
        sh : Hour (1min avg)
         n : Half Day (5min avg)
        sn : Half Day (1min avg)
@@ -111,7 +112,7 @@ usage: gfspark &lt;url|path|service_name&gt; [section_name] [graph_name]
 
 <p>gfspark does not supports "COMPLEX GRAPH".
 if graph output is broken, try <code>--non-fullwidth-font</code> option.
-For example, your Terminal font is "Rickty", then it'll be fix graph output problem.</p>
+For example, if your Terminal font is "Rickty", then it'll be fix graph output problem.</p>
 
 <h2>
 <a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
